feat: add fullscreen toggle support

--- a/appbase/index.html
+++ b/appbase/index.html
@@ -38,6 +38,22 @@
               >☀️</span
             >
           </button>
+          <button
+            class="ac-theme-toggle ac-fullscreen-toggle"
+            type="button"
+            data-fullscreen-toggle
+            aria-pressed="false"
+            aria-label="Ativar tela cheia"
+            title="Ativar tela cheia"
+            hidden
+          >
+            <span
+              class="ac-theme-toggle__icon"
+              data-fullscreen-toggle-icon
+              aria-hidden="true"
+              >⛶</span
+            >
+          </button>
         </div>
       </header>
 
